# dbt-features

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: deploy-demo.yml  example-action.yml  release.yml  test.yml
dbt_package/: README.md  dbt_project.yml
dbt_package/macros/: validate.sql
docs/: dbt-package.md  deploy.md  enrichment.md  example-github-action.yml  schema.md
docs/screenshots/: README.md
examples/jaffle_shop_features/: .user.yml  README.md  dbt_project.yml  profiles.yml
examples/jaffle_shop_features/models/features/: _features.yml  customer_features_daily.sql  customer_features_lifetime.sql
examples/jaffle_shop_features/models/metrics/: consumer_dashboard_metrics.sql
examples/jaffle_shop_features/models/staging/: stg_orders.sql
examples/jaffle_shop_features/seeds/: raw_orders.csv
src/dbt_features/: __init__.py  __main__.py  catalog.py  cli.py  inference.py  parser.py  renderer.py  schema.py
src/dbt_features/demo/: __init__.py  manifest.json
src/dbt_features/enrichment/: __init__.py  cache.py  engine.py  exceptions.py  format.py  models.py  profiles.py
src/dbt_features/enrichment/adapters/: __init__.py  _dbapi.py  bigquery.py  duckdb.py  postgres.py  redshift.py  snowflake.py
src/dbt_features/static/: filter.js  lineage.js  search.js  sort.js  style.css  tabs.js  theme.js
src/dbt_features/templates/: base.html  feature.html  feature_group.html  index.html  lineage.html  model.html  models_index.html
tests/: conftest.py  test_cli.py  test_dbapi_adapters.py  test_enrichment.py  test_inference.py  test_parser.py  test_real_manifest.py  test_renderer.py  test_schema.py  test_snowflake_bigquery_adapters.py
tests/fixtures/: catalog.json  manifest.json
tests/fixtures/real/: catalog.json  manifest.json
