[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "dbt-features"
version = "0.1.0"
description = "A feature catalog for ML teams whose features live as dbt models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "dbt-features contributors" }]
keywords = ["dbt", "feature-catalog", "feature-store", "ml", "mlops", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
dbt-features = "dbt_features.cli:main"

[project.urls]
Homepage = "https://github.com/gauthierpiarrette/dbt-features"
Issues = "https://github.com/gauthierpiarrette/dbt-features/issues"
Documentation = "https://github.com/gauthierpiarrette/dbt-features#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_features"]

[tool.hatch.build.targets.sdist]
include = [
    "src/dbt_features",
    "tests",
    "examples",
    "dbt_package",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
