[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "dbt-features"
version = "0.4.0"
description = "Feature catalog for dbt projects, built for ML teams."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "dbt-features contributors" }]
keywords = ["dbt", "feature-catalog", "feature-store", "ml", "mlops", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "pydantic>=2.5",
]

[project.optional-dependencies]
# Per-warehouse extras for the optional `--connection` enrichment layer.
# Each pulls in PyYAML (needed to read profiles.yml) plus the warehouse's
# native driver. Repetition of pyyaml is intentional — keeps each extra
# self-contained for users who only want one warehouse.
duckdb = ["pyyaml>=6.0", "duckdb>=0.9"]
postgres = ["pyyaml>=6.0", "psycopg2-binary>=2.9"]
redshift = ["pyyaml>=6.0", "redshift-connector>=2.0"]
snowflake = ["pyyaml>=6.0", "snowflake-connector-python>=3.0"]
bigquery = ["pyyaml>=6.0", "google-cloud-bigquery>=3.0"]

dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    # Tests cover enrichment via DuckDB.
    "pyyaml>=6.0",
    "duckdb>=0.9",
]

[project.scripts]
dbt-features = "dbt_features.cli:main"

[project.urls]
Homepage = "https://github.com/gauthierpiarrette/dbt-features"
Issues = "https://github.com/gauthierpiarrette/dbt-features/issues"
Documentation = "https://github.com/gauthierpiarrette/dbt-features#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_features"]

[tool.hatch.build.targets.sdist]
include = [
    "src/dbt_features",
    "tests",
    "examples",
    "dbt_package",
    "docs",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
